--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/keen-slider@latest/keen-slider.js"></script>
-    <script type="module" src="/js/WOW.js" defer></script>
+    <script type="module" src="/js/wow.js" defer></script>
     <script type="module" src="/js/main.js" defer></script>
   </head>
 
