--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     />
     <link
       rel="stylesheet"
-      href="node_modules/keen-slider/keen-slider.min.css"
+      href="https://cdn.jsdelivr.net/npm/keen-slider@latest/keen-slider.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/keen-slider@latest/keen-slider.js"></script>
     <script type="module" src="/js/wow.js" defer></script>
