--- a/src/about_us.html
+++ b/src/about_us.html
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="/js/main.js" defer></script>
   </head>
-  
+
   <body>
     {{> header }}
     <main>
@@ -31,14 +31,20 @@
             />
             <div class="container">
               <h2 class="title">
-                <span class="stroke_1"> Shangora is a company with </span>
+                <div class="stroke_wrap_1">
+                  <span class="item_1 item">Shangora is</span>
+                  <span class="item_2 item">a company with </span>
+                </div>
                 <span class="stroke_2">
                   <span class="font">many years</span> of experience in
                 </span>
                 <span class="stroke_3">
                   the world of <span class="font">metal</span> and
                 </span>
-                <span class="stroke_4"> in the field of working with it. </span>
+                <div class="stroke_wrap_4">
+                  <span class="item_1 item">in the field of</span>
+                  <span class="item_2 item">working with it.</span>
+                </div>
               </h2>
             </div>
           </div>
@@ -51,13 +57,12 @@
             <div class="container">
               <h2 class="title">
                 <span class="stroke_1">
-                  We create <span class="font">metal sculptures</span>
+                  We create &nbsp;<span class="font">metal sculptures</span>
                 </span>
-                <span class="stroke_2"> and art objects using </span>
-                <span class="stroke_3"> welding, forging</span>
+                <span class="stroke_2">and art objects using </span>
+                <span class="stroke_3">welding, forging</span>
                 <span class="stroke_4">
-                  and &nbsp;
-                  <span class="font">aesthetic</span> &nbsp; metal processing.
+                  and &nbsp; <br> <span class="font">aesthetic</span> &nbsp; metal processing.
                 </span>
               </h2>
             </div>
