--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
                 </div>
               </div>
             </div>
-            <a href="#" class="catalogue_btn">
+            <a href="collection.html" class="catalogue_btn">
               <span>Our catalogue</span>
             </a>
           </div>
