--- a/src/collection.html
+++ b/src/collection.html
@@ -34,116 +34,168 @@
                 </div>
                 <div class="filter_body">
                   <div class="all_filter" id="showAll">
-                    <p class="filter_name">All Products</p>
+                    <p class="name">All Products</p>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >Abstraction
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <div class="name_wrap">
+                          <h3 class="name">Abstraction</h3>
+                          (<span class="count"></span>)
+                        </div>
+                      </div>
                       <input type="checkbox" class="filter" value="filter1" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >Furniture
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <div class="name_wrap">
+                          <h3 class="name">Furniture</h3>
+                          (<span class="count"></span>)
+                        </div>
+                      </div>
                       <input type="checkbox" class="filter" value="filter2" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >Rings
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">Rings</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter3" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >Fruits
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">Fruits</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter4" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >geometry
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">geometry</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter5" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >pylogonal
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">pylogonal</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter6" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >planet earth
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">planet earth</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter7" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >heart
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">heart</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter8" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >religion
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">religion</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter9" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >fantasy
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">fantasy</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter10" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >nature
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">nature</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter11" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >animals
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">animals</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter12" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >family
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">family</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter13" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >human
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">human</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter14" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >water
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">water</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter15" />
                       <div class="custom-checkbox"></div>
                     </label>
                   </div>
                   <div class="input_wrap">
-                    <label class="filter_name"
-                      >other
+                    <label class="filter_name">
+                      <div class="name_wrap">
+                        <h3 class="name">other</h3>
+                        (<span class="count"></span>)
+                      </div>
                       <input type="checkbox" class="filter" value="filter16" />
                       <div class="custom-checkbox"></div>
                     </label>
